// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`admin_console/team_channel_settings/channel/ChannelDetails > should match snapshot 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="btn btn-secondary btn-danger"
                  type="button"
                >
                  <i
                    class="icon icon-archive-outline"
                  />
                  Archive Channel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Sync Group Members
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="syncGroupSwitch"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle"
                      data-testid="syncGroupSwitch-button"
                      id="syncGroupSwitch"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      When enabled, adding and removing users from groups will add or remove them from this channel. The only way of inviting members to this channel is by adding the groups they belong to. 
                      <a
                        href="https://www.mattermost.com/pl/default-ldap-group-constrained-team-channel.html?utm_source=mattermost&utm_medium=in-product&utm_content=channel_modes&uid=&sid=&edition=team&server_version="
                        location="channel_modes"
                        rel="noopener noreferrer"
                        target="_blank"
                      >
                        Learn More
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle disabled"
                      data-testid="policy-enforce-toggle-button"
                      disabled=""
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Only private channels can be attribute based.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_groups"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Groups
              </h3>
              <div
                class="mt-2"
              >
                Select groups to be added to this channel.
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="style--none btn btn-primary"
                id="addGroupsToChannelToggle"
              >
                Add Group
              </button>
            </div>
          </div>
          <div
            class="groups-list groups-list-no-padding"
          >
            <div
              class="groups-list--header"
            >
              <div
                class="group-name group-name-adjusted"
              >
                Group Name
              </div>
              <div
                class="group-content"
              >
                <div
                  class="group-description group-description-adjusted"
                >
                  Member Count
                </div>
                <div
                  class="group-description group-description-adjusted"
                >
                  Roles
                </div>
                <div
                  class="group-actions"
                />
              </div>
            </div>
            <div
              class="groups-list--body"
              id="groups-list--body"
            >
              <div
                class="group"
                id="group"
              >
                <div
                  class="group-row"
                  id="group-row"
                >
                  <span
                    class="group-name row-content"
                  >
                    DN
                  </span>
                  <span
                    class="group-description row-content"
                  >
                    <button
                      class="style--none color--link"
                      id="DNMembersToggle"
                    >
                      3 members
                    </button>
                  </span>
                  <div
                    class="group-description row-content roles"
                  >
                    <div
                      class="MenuWrapper "
                    >
                      <div>
                        <a
                          data-testid="current-role"
                        >
                          <span>
                            Member
                          </span>
                          <span
                            class="caret"
                          />
                        </a>
                      </div>
                    </div>
                  </div>
                  <span
                    class="group-actions"
                    id="group-actions"
                  >
                    <a
                      class=""
                      href="#"
                    >
                      Remove
                    </a>
                  </span>
                </div>
              </div>
            </div>
            <div
              class="groups-list--footer"
            >
              <div
                class="counter"
              >
                1 - 1 of 1
              </div>
              <button
                class="btn btn-tertiary prev disabled"
                disabled=""
                type="button"
              >
                <i
                  class="icon icon-chevron-left"
                  title="Previous Icon"
                />
              </button>
              <button
                class="btn btn-tertiary next disabled"
                data-testid="page-link-next"
                disabled=""
                type="button"
              >
                <i
                  class="icon icon-chevron-right"
                  title="Next Icon"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channelMembers"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Members
              </h3>
              <div
                class="mt-2"
              >
                A list of users who are currently in the channel right now
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="style--none btn btn-primary"
                id="addChannelMembers"
              >
                Add Members
              </button>
            </div>
          </div>
          <div
            class="DataGrid"
          >
            <div
              class="DataGrid_search"
            >
              <div
                class="DataGrid_searchBar"
              >
                <span
                  aria-hidden="true"
                  class="DataGrid_searchIcon"
                >
                  <i
                    class="fa fa-search"
                    title="Search Icon"
                  />
                </span>
                <input
                  data-testid="searchInput"
                  placeholder="Search"
                  type="text"
                  value=""
                />
                <i
                  class="DataGrid_clearButton fa fa-times-circle hidden"
                  data-testid="clear-search"
                />
              </div>
              <div
                class="Filter"
              >
                <button
                  class="Filter_button"
                  type="button"
                >
                  <i
                    class="Icon icon-filter-variant"
                  />
                  Filters
                </button>
                <div
                  class="Filter_content"
                >
                  <div
                    class="Filter_header"
                  >
                    <div
                      class="Filter_title"
                    >
                      Filter by
                    </div>
                    <a
                      class="Filter_reset"
                    >
                      Reset filters
                    </a>
                  </div>
                  <hr />
                  <div
                    class="Filter_lists"
                  >
                    <div
                      class="FilterList"
                    >
                      <div
                        class="FilterList_name"
                      >
                        Role
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_user"
                              name="channel_user"
                              type="checkbox"
                            />
                            Member
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_admin"
                              name="channel_admin"
                              type="checkbox"
                            />
                            Channel Admin
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="system_admin"
                              name="system_admin"
                              type="checkbox"
                            />
                            System Admin
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="btn btn-primary btn-sm Filter_apply"
                    disabled=""
                    type="button"
                  >
                    Apply
                  </button>
                </div>
              </div>
            </div>
            <div
              class="DataGrid_header"
            >
              <div
                class="DataGrid_cell"
                style="flex-grow: 3;"
              >
                Name
              </div>
              <div
                class="DataGrid_cell"
              />
              <div
                class="DataGrid_cell"
              >
                Role
              </div>
              <div
                class="DataGrid_cell"
              />
            </div>
            <div
              class="DataGrid_rows"
              style="min-height: 0px;"
            >
              <div
                class="DataGrid_empty"
              >
                No users found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <a
        class="btn btn-quaternary"
        href="/admin_console/user_management/channels"
        id="cancelButtonSettings"
      >
        Cancel
      </a>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails > should match snapshot for Enterprise 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="btn btn-secondary btn-danger"
                  type="button"
                >
                  <i
                    class="icon icon-archive-outline"
                  />
                  Archive Channel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Enable attribute based channel access
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="policy-enforce-toggle"
                  >
                    <button
                      aria-pressed="false"
                      class="btn btn-lg btn-toggle disabled"
                      data-testid="policy-enforce-toggle-button"
                      disabled=""
                      id="policy-enforce-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Only private channels can be attribute based.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channelMembers"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Members
              </h3>
              <div
                class="mt-2"
              >
                A list of users who are currently in the channel right now
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="style--none btn btn-primary"
                id="addChannelMembers"
              >
                Add Members
              </button>
            </div>
          </div>
          <div
            class="DataGrid"
          >
            <div
              class="DataGrid_search"
            >
              <div
                class="DataGrid_searchBar"
              >
                <span
                  aria-hidden="true"
                  class="DataGrid_searchIcon"
                >
                  <i
                    class="fa fa-search"
                    title="Search Icon"
                  />
                </span>
                <input
                  data-testid="searchInput"
                  placeholder="Search"
                  type="text"
                  value=""
                />
                <i
                  class="DataGrid_clearButton fa fa-times-circle hidden"
                  data-testid="clear-search"
                />
              </div>
              <div
                class="Filter"
              >
                <button
                  class="Filter_button"
                  type="button"
                >
                  <i
                    class="Icon icon-filter-variant"
                  />
                  Filters
                </button>
                <div
                  class="Filter_content"
                >
                  <div
                    class="Filter_header"
                  >
                    <div
                      class="Filter_title"
                    >
                      Filter by
                    </div>
                    <a
                      class="Filter_reset"
                    >
                      Reset filters
                    </a>
                  </div>
                  <hr />
                  <div
                    class="Filter_lists"
                  >
                    <div
                      class="FilterList"
                    >
                      <div
                        class="FilterList_name"
                      >
                        Role
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_user"
                              name="channel_user"
                              type="checkbox"
                            />
                            Member
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_admin"
                              name="channel_admin"
                              type="checkbox"
                            />
                            Channel Admin
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="system_admin"
                              name="system_admin"
                              type="checkbox"
                            />
                            System Admin
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="btn btn-primary btn-sm Filter_apply"
                    disabled=""
                    type="button"
                  >
                    Apply
                  </button>
                </div>
              </div>
            </div>
            <div
              class="DataGrid_header"
            >
              <div
                class="DataGrid_cell"
                style="flex-grow: 3;"
              >
                Name
              </div>
              <div
                class="DataGrid_cell"
              />
              <div
                class="DataGrid_cell"
              >
                Role
              </div>
              <div
                class="DataGrid_cell"
              />
            </div>
            <div
              class="DataGrid_rows"
              style="min-height: 0px;"
            >
              <div
                class="DataGrid_empty"
              >
                No users found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <a
        class="btn btn-quaternary"
        href="/admin_console/user_management/channels"
        id="cancelButtonSettings"
      >
        Cancel
      </a>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails > should match snapshot for Professional 1`] = `
<div>
  <div
    class="wrapper--fixed"
  >
    <div
      class="admin-console__header with-back"
    >
      <div>
        <a
          class="fa fa-angle-left back"
          href="/admin_console/user_management/channels"
        />
        Channel Configuration
      </div>
    </div>
    <div
      class="admin-console__wrapper"
    >
      <div
        class="admin-console__content"
      >
        <div
          class="AdminPanel clearfix "
          id="channel_profile"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Profile
              </h3>
              <div
                class="mt-2"
              >
                Summary of the channel, including the channel name.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels AdminChannelDetails"
          >
            <div
              class="group-teams-and-channels--body channel-desc-col"
            >
              <div
                class="channel-name"
              >
                <b>
                  Name
                </b>
                <br />
                name
              </div>
              <div
                class="channel-team"
              >
                <b>
                  Team
                </b>
                <br />
                test
              </div>
              <div
                class="AdminChannelDetails_archiveContainer"
              >
                <button
                  class="btn btn-secondary btn-danger"
                  type="button"
                >
                  <i
                    class="icon icon-archive-outline"
                  />
                  Archive Channel
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_moderation"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Advanced Access Control
              </h3>
              <div
                class="mt-2"
              >
                Manage the actions available to channel members and guests.
              </div>
            </div>
          </div>
          <div
            class="channel-moderation"
          >
            <div
              class="channel-moderation--body"
            >
              <table
                class="channel-moderation--table"
                id="channel_moderation_table"
              >
                <thead>
                  <tr>
                    <th>
                      Permissions
                    </th>
                    <th>
                      Guests
                    </th>
                    <th>
                      Members
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channel_manage"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Channel Management
              </h3>
              <div
                class="mt-2"
              >
                Choose between inviting members manually or syncing members automatically from groups.
              </div>
            </div>
          </div>
          <div
            class="group-teams-and-channels"
          >
            <div
              class="group-teams-and-channels--body"
            >
              <div>
                <div
                  class="line-switch d-flex flex-sm-column flex-md-row align-items-sm-start align-items-center"
                >
                  <label
                    class="line-switch__label"
                  >
                    Public channel or private channel
                  </label>
                  <div
                    class="line-switch__toggle"
                    data-testid="allow-all-toggle"
                  >
                    <button
                      aria-pressed="true"
                      class="btn btn-lg btn-toggle active"
                      data-testid="allow-all-toggle-button"
                      id="allow-all-toggle"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="handle"
                      />
                      <div
                        class="bg-text on"
                      >
                        Public
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="row"
                >
                  <div
                    class="col-sm-10"
                  >
                    <div
                      class="help-text-small help-text-no-padding "
                    >
                      Select Public for a channel any user can find and join. 
                      <br />
                      Select Private to require channel invitations to join. 
                      <br />
                      Use this switch to change this channel from public to private or from private to public.
                    </div>
                  </div>
                </div>
                <div
                  class="section-separator"
                >
                  <hr
                    class="separator__hr"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="AdminPanel clearfix "
          id="channelMembers"
        >
          <div
            class="header"
          >
            <div>
              <h3>
                Members
              </h3>
              <div
                class="mt-2"
              >
                A list of users who are currently in the channel right now
              </div>
            </div>
            <div
              class="button"
            >
              <button
                class="style--none btn btn-primary"
                id="addChannelMembers"
              >
                Add Members
              </button>
            </div>
          </div>
          <div
            class="DataGrid"
          >
            <div
              class="DataGrid_search"
            >
              <div
                class="DataGrid_searchBar"
              >
                <span
                  aria-hidden="true"
                  class="DataGrid_searchIcon"
                >
                  <i
                    class="fa fa-search"
                    title="Search Icon"
                  />
                </span>
                <input
                  data-testid="searchInput"
                  placeholder="Search"
                  type="text"
                  value=""
                />
                <i
                  class="DataGrid_clearButton fa fa-times-circle hidden"
                  data-testid="clear-search"
                />
              </div>
              <div
                class="Filter"
              >
                <button
                  class="Filter_button"
                  type="button"
                >
                  <i
                    class="Icon icon-filter-variant"
                  />
                  Filters
                </button>
                <div
                  class="Filter_content"
                >
                  <div
                    class="Filter_header"
                  >
                    <div
                      class="Filter_title"
                    >
                      Filter by
                    </div>
                    <a
                      class="Filter_reset"
                    >
                      Reset filters
                    </a>
                  </div>
                  <hr />
                  <div
                    class="Filter_lists"
                  >
                    <div
                      class="FilterList"
                    >
                      <div
                        class="FilterList_name"
                      >
                        Role
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_user"
                              name="channel_user"
                              type="checkbox"
                            />
                            Member
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="channel_admin"
                              name="channel_admin"
                              type="checkbox"
                            />
                            Channel Admin
                          </label>
                        </div>
                      </div>
                      <div
                        class="FilterList_item"
                      >
                        <div
                          class="FilterList_checkbox"
                        >
                          <label>
                            <input
                              id="system_admin"
                              name="system_admin"
                              type="checkbox"
                            />
                            System Admin
                          </label>
                        </div>
                      </div>
                    </div>
                  </div>
                  <button
                    class="btn btn-primary btn-sm Filter_apply"
                    disabled=""
                    type="button"
                  >
                    Apply
                  </button>
                </div>
              </div>
            </div>
            <div
              class="DataGrid_header"
            >
              <div
                class="DataGrid_cell"
                style="flex-grow: 3;"
              >
                Name
              </div>
              <div
                class="DataGrid_cell"
              />
              <div
                class="DataGrid_cell"
              >
                Role
              </div>
              <div
                class="DataGrid_cell"
              />
            </div>
            <div
              class="DataGrid_rows"
              style="min-height: 0px;"
            >
              <div
                class="DataGrid_empty"
              >
                No users found
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="admin-console-save"
    >
      <button
        class="btn btn-primary"
        data-testid="saveSetting"
        disabled=""
        id="saveSetting"
        type="submit"
      >
        <span>
          Save
        </span>
      </button>
      <a
        class="btn btn-quaternary"
        href="/admin_console/user_management/channels"
        id="cancelButtonSettings"
      >
        Cancel
      </a>
      <div
        class="error-message"
      />
    </div>
  </div>
</div>
`;
